--- a/Roadmap/src/PlanImplementare.tex
+++ b/Roadmap/src/PlanImplementare.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
 \geometry{a4paper, margin=1in}
-\title{VisioScience 3D - Platforma Web pentru Materii Stiintifice}
+\title{VisioScience 3D - Platforma Web pentru Invatare prin Vizualizari 3D}
 \author{Andrei Dragomir}
 \date{Februarie 2025}
 
@@ -24,13 +24,15 @@ inteles pentru elevi. Aceasta platforma Web va functiona ca un loc centralizat p
 \section*{Tehnologii utilizate}
 
 Platforma va avea la baza un backend scris in Go pentru gestionarea datelor si interactiunea cu
-utilizatorii, iar frontend-ul va fi realizat cu React si Three.js pentru randarea graficii 3D.
+utilizatorii, iar frontend-ul va fi realizat cu React, Tailwind CSS si Three.js pentru randarea graficii 3D.
 Simularile fizice vor fi implementate cu ajutorul Cannon.js. Ambele framework-uri folosesc la 
 baza WebGL pentru randarea graficii 3D.
 
 \section*{Structura si continutul}
 Platforma va include un meniu cu disciplinele stiintifice si subiecte specifice fiecarei materii:
 \begin{itemize}
+    \item \textbf{Landing page:} Meniul principal va fi construit folosind elemente 3D pentru alegerea materiilor
+    si va avea o experienta de navigare 3D pentru selectare.
     \item \textbf{Matematica:} Vizualizari interactive ale formelor geometrice 
     (ex: cercuri cu raza si diametru ajustabile), graficul functiilor si formule asociate.
     Acestea vor ajuta elevii sa vizualizeze invatarea geometriei printr-un mod interactiv si vizual.
