[DOC] added first touches of pdf doc

--- a/Roadmap/src/Documentatie/src/base/abstract.tex
+++ b/Roadmap/src/Documentatie/src/base/abstract.tex
@@ -1,3 +1,23 @@
 % This file contains the abstract of the thesis
 
-Here goes the abstract about \project. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean aliquam lectus vel orci malesuada accumsan. Sed lacinia egestas tortor, eget tristique dolor congue sit amet. Curabitur ut nisl a nisi consequat mollis sit amet quis nisl. Vestibulum hendrerit velit at odio sodales pretium. Nam quis tortor sed ante varius sodales. Etiam lacus arcu, placerat sed laoreet a, facilisis sed nunc. Nam gravida fringilla ligula, eu congue lorem feugiat eu.
+Proiectul VisioScience3D vine ca un răspuns la nevoia de a crea un mediu de învățare\\
+interactiv și captivant pentru elevii din învățământul preuniversitar.\\
+Acesta îmbină tehnologia avansată pentru a crea un sistem de învățare bazat pe vizualizări 3D\\
+și simulări interactive, care să faciliteze înțelegerea conceptelor complexe din domeniul științelor exacte.\\
+
+
+
+
+In momentul curent învățarea geometriei, fizicii, chimiei și altor discipline științifice\\
+se face prin metode tradiționale, care nu reușesc să capteze atenția elevilor.\\
+Prin acest proiect ne dorim sa venim în întâmpinarea acestei nevoi,\\
+să oferim un mediu de învățare interactiv și captivant care să faciliteze\\
+activitatea didactică și să îmbunătățească rezultatele elevilor.\\
+
+
+
+
+Proiectul VisioScience3D este o aplicație web care permite utilizatorilor să exploreze\\
+domeniul științelor exacte prin intermediul simulărilor interactive și vizualizărilor 3D.\\
+Acesta oferă o soluție inovatoare si complxă pentru elevi și profesori,\\
+avand posibilitate sa predea si evalueze elevii prin intermediul platformei.\\
