--- a/Roadmap/src/Documentatie/template/titlepage.ro.tex
+++ b/Roadmap/src/Documentatie/template/titlepage.ro.tex
@@ -9,15 +9,15 @@
 
 		\vspace*{35mm}
 		{\Huge LUCRARE DE DIPLOMĂ}\\[15mm]
-		{\Huge \VARtitlero}\\[35mm]
+		{\Huge VisioScience3D}\\[35mm]
 
 		\begin{tabular}{p{0.45\textwidth} c p{0.45\textwidth}}
-			\raggedright \Large \textbf{Conducător Științific:} \\ \Large \VARadviser
+			\raggedright \Large \textbf{Conducător Științific:} \\ \Large Moraru Anca Andreea
 			& &
-			\raggedleft \Large \textbf{Autor:} \\ \Large \VARauthor
+			\raggedleft \Large \textbf{Autor:} \\ \Large Dragomir Andrei-Mihai
 		\end{tabular}
 
 		\vspace*{40mm}
-		\Large \VARtitlefooterro
+		\Large București, 2025
 	\end{center}
 \end{titlepage}
