--- a/Roadmap/src/Documentatie/src/base/acknowledgements.tex
+++ b/Roadmap/src/Documentatie/src/base/acknowledgements.tex
@@ -1,16 +1,11 @@
 % This file contains acknowledgements
 \vspace*{7cm}
 \begin{center}
-Maecenas elementum venenatis dui, sit amet\\
-vehicula ipsum molestie vitae. Sed porttitor\\
-urna vel ipsum tincidunt venenatis. Aenean\\
-adipiscing porttitor nibh a ultricies. Curabitur\\
-vehicula semper lacus a rutrum.
+Realizarea acestui proiect nu ar fi fost posibilă fără ajutorul și sprijinul\\
+D-nei Prof.dr.ing Anca Andreea Moraru. Mulțumesc pentru îndrumare,\\
+promptitudine și răbdare.\\
+Mulțumesc tuturor celorlalți profesori, laboratori și colegi care mi-au facilitat\\
+procesul de învățare și mi-au oferit suportul necesar de-a lungul acestor 4 ani, punându-mi
+bazele solide in dimeniul ingineriei de Calculatoare.\\
 \end{center}
-\vspace{0.6cm}
-\begin{center}
-Quisque ac feugiat libero. Fusce dui tortor,\\
-luctus a convallis sed, lacinia sed ligula.\\
-Integer arcu metus, lacinia vitae posuere ut,\\
-tempor ut ante.
-\end{center}
+
