--- a/Roadmap/src/Documentatie/src/global.tex
+++ b/Roadmap/src/Documentatie/src/global.tex
@@ -1,13 +1,13 @@
 % Thesis info
-\title{Magnificient Title}
-\author{John/Jane Doe}
-\date{Year of Grace}
+\title{VisioScience3D}
+\author{Dragomir Andrei-Mihai}
+\date{2025}
 
-\titleen{Magnificent Title}
-\titlero{Un titlu de senzație}
-\adviser{Prof. Magnificus Academicus}
-\titlefooteren{Bucharest, Year of Grace}
-\titlefooterro{București, Anul de Grație}
+% \titleen{Magnificent Title}
+% \titlero{Un titlu de senzație}
+% \adviser{Prof. Magnificus Academicus}
+% % \titlefooteren{Bucharest, Year of Grace}
+% \titlefooterro{București, Anul de Grație}
 
 % Macros
 % example: \newcommand{\EU}{European Union}
