--- a/Roadmap/src/Documentatie/template/titlepage.en.tex
+++ b/Roadmap/src/Documentatie/template/titlepage.en.tex
@@ -19,19 +19,19 @@
 		\par\vspace*{35mm}
 		{\Huge BACHELOR THESIS}
 		\par\vspace*{15mm}
-		{\Huge \VARtitleen}
+		{\Huge VisioScience3D}
 		\par\vspace*{35mm}
 		\begin{table*}[h]
         	\begin{center}
 				\begin{tabular}{lcccccl}
 					\Large \textbf{\Large Scientific Adviser:}
 					\vspace*{1mm} &&&&&& \Large \textbf{\Large Author:}\vspace*{1mm} \\
-					\Large \VARadviser &&&&&& \Large \VARauthor
+					\Large Moraru Anca Andreea &&&&&& \Large Dragomir Andrei-Mihai \\
 				\end{tabular}
 			\end{center}
 		\end{table*}
 
 		\par\vspace*{40mm}
-		\Large \VARtitlefooteren
+		\Large Bucharest, 2025
 	\end{center}
 \end{titlepage}
