[DOC] added chapters in doc

--- a/Roadmap/src/Documentatie/src/main.tex
+++ b/Roadmap/src/Documentatie/src/main.tex
@@ -1,4 +1,13 @@
 % All chapters
 % do not include .tex extension
 \include{src/chapters/intro}
+\include{src/chapters/analiza}
+\include{src/chapters/studiuPiata}
+\include{src/chapters/tehnologii}
+\include{src/chapters/implementare}
+\include{src/chapters/scenariiUtilizare}
+\include{src/chapters/evaluare}
+\include{src/chapters/concluzii}
+\include{src/chapters/bibliografie}
+\include{src/chapters/anexe}
 % \include{src/chapters/second-chapter}
