[DOC] added intro and science base bibliography

--- a/Roadmap/src/Documentatie/thesis.cs.pub.ro.cls
+++ b/Roadmap/src/Documentatie/thesis.cs.pub.ro.cls
@@ -177,7 +177,7 @@
     \addcontentsline{toc}{chapter}{#1}}
 
 \newenvironment{acknowledgements} {
-    \notitlesection{Acknowledgements}
+    \notitlesection{Mulțumiri}
     \thispagestyle{empty} }
 {\pagestyle{fancy}}
 
