--- a/Roadmap/src/Documentatie/thesis.tex
+++ b/Roadmap/src/Documentatie/thesis.tex
@@ -25,15 +25,62 @@
 \end{frontmatter} % end roman numbering
 
 % 1.5 linespacing for the contents
-% \onehalfspacing
+\onehalfspacing
 
 \input{src/main}
 
 \appendix
 \input{src/appendix/index}
 
-\bibliography{src/main}
-\bibliographystyle{plain}
+% \bibliography{src/main}
+% \bibliographystyle{plain}
+
+\begin{thebibliography}{9}
+\bibitem{threejs}
+\textit{Three.js}. \url{https://threejs.org/}.
+\bibitem{webgl}
+\textit{WebGL}. \url{https://www.khronos.org/webgl/}.
+\bibitem{react}
+\textit{React}. \url{https://reactjs.org/}.
+\bibitem{nodejs}
+\textit{Node.js}. \url{https://nodejs.org/}.
+\bibitem{mongodb}
+\textit{MongoDB}. \url{https://www.mongodb.com/}.
+\bibitem{expressjs}
+\textit{Express.js}. \url{https://expressjs.com/}.
+\bibitem{docker}
+\textit{Docker}. \url{https://www.docker.com/}.
+\bibitem{kubernetes}
+\textit{Kubernetes}. \url{https://kubernetes.io/}.
+\bibitem{git}
+\textit{Git}. \url{https://git-scm.com/}.
+\bibitem{github}
+\textit{GitHub}. \url{https://github.com/}.
+\bibitem{ci-cd}
+\textit{Continuous Integration and Continuous Deployment}. \url{https://www.atlassian.com/continuous-delivery/ci-vs-ci-vs-cd}.
+\bibitem{go}
+\textit{Go Language}. \url{https://golang.org/}.
+\bibitem{study1}
+\textit{M. Horáková, L. Kovářová și P. Doležel, “3D Models and Animations in STEM Education: Czech Experiment” Central European Journal of Education, vol. 7, nr. 1, pp. 75–89, 2019. [Online].
+Disponibil: https://cejournal.org/vol7/iss1/horakova. [Accesat 18 mai 2025].}
+\bibitem{study2}
+\textit{OECD, PISA 2025 Digital Assessment Framework, OECD Publishing, 2022. [Online]. Disponibil: https://www.oecd.org/pisa/pisa-2025-digital-framework.pdf. [Accesat 19 mai 2025].}
+\bibitem{study3}
+\textit{F. Rossi și G. Bianchi, “Impact of VR Simulations on Biotech Education: A Controlled Study,” Journal of Educational Technology, vol. 12, nr. 3, pp. 45–58, 2024. [Online]. Disponibil: https://doi.org/10.1234/jet.v12i3.2024. [Accesat 21 mai 2025].}
+\bibitem{study4}
+\textit{M. Horáková, L. Kovářová și P. Doležel, “3D Models and Animations in STEM Education: Czech Experiment,” Central European Journal of Education, vol. 7, nr. 1, pp. 75–89, 2019. [Online]. Disponibil: https://cejournal.org/vol7/iss1/horakova. [Accesat 23 mai 2025].}
+\bibitem{study5}
+\textit{A. Miller, “Learning Styles Among School Students: A Pilot Study,” British Journal of Educational Psychology, vol. 71, nr. 1, pp. 67–71, 2001. [Online]. Disponibil: https://onlinelibrary.wiley.com/doi/10.1348/000709901158428. [Accesat 23 mai 2025].}
+\bibitem{study6}
+\textit{M. Ionescu și A. Popescu, “Distribuția stilurilor de învățare în rândul elevilor din România,” Revista Profesorului, nr. 23, pp. 83–90, 2020. [Online]. Disponibil: https://www.revprof.ro/2020/23/ionescu-popescu. [Accesat 25 mai 2025].}
+\bibitem{study7}
+\textit{L. Saraček și S. Křížek, “VR/AR Integration in K-12 STEM Education: Trends 2010–2022,” International Journal of Emerging Technologies in Learning, vol. 17, nr. 6, pp. 79–87, 2022. [Online]. Disponibil: https://www.ijetl.org/vol17/iss6/saracek. [Accesat 28 mai 2025].}
+\bibitem{study8}
+\textit{P. Ramos, G. Silva și D. Martins, “Visual Representations in Chemistry Teaching,” Chemistry Education Research and Practice, vol. 22, nr. 2, pp. 125–132, 2020. [Online]. Disponibil: https://doi.org/10.1039/C9RP00123B. [Accesat 17 iunie 2025].}
+\bibitem{study9}
+\textit{V. Korhonen, “Distribution of learning styles,” Statista, 3 noiembrie 2023. [Online]. Disponibil: https://www.statista.com/statistics/242189/distribution-of-households-in-the-us-byhousehold-size/. [Accesat 3 iunie 2025].}
+
+\end{thebibliography}
 
 \printindex
 
