--- a/Roadmap/src/Documentatie/src/main.tex
+++ b/Roadmap/src/Documentatie/src/main.tex
@@ -8,6 +8,6 @@
 \include{src/chapters/scenariiUtilizare}
 \include{src/chapters/evaluare}
 \include{src/chapters/concluzii}
-\include{src/chapters/bibliografie}
-\include{src/chapters/anexe}
+% \include{src/chapters/bibliografie}
+% \include{src/chapters/anexe}
 % \include{src/chapters/second-chapter}
