--- a/Roadmap/src/Documentatie/template/contents.pages.tex
+++ b/Roadmap/src/Documentatie/template/contents.pages.tex
@@ -3,10 +3,10 @@
 \tableofcontents
 \newpage
 
-\listoffigures
-\newpage
+% \listoffigures
+% \newpage
 
-\listoftables
-\newpage
+% \listoftables
+% \newpage
 %\renewcommand\lstlistlistingname{List of Listings}
 %\lstlistoflistings
