--- a/Roadmap/src/Documentatie/thesis.tex
+++ b/Roadmap/src/Documentatie/thesis.tex
@@ -25,7 +25,8 @@
 \end{frontmatter} % end roman numbering
 
 % 1.5 linespacing for the contents
-\onehalfspacing
+% \doublespacing 
+\setstretch{1.6}  
 
 \input{src/main}
 
@@ -35,52 +36,69 @@
 % \bibliography{src/main}
 % \bibliographystyle{plain}
 
-\begin{thebibliography}{9}
+\begin{thebibliography}{99}
+
 \bibitem{threejs}
-\textit{Three.js}. \url{https://threejs.org/}.
+\textit{Three.js}. \href{https://threejs.org/}{https://threejs.org/}.
+
 \bibitem{webgl}
-\textit{WebGL}. \url{https://www.khronos.org/webgl/}.
+\textit{WebGL}. \href{https://www.khronos.org/webgl/}{https://www.khronos.org/webgl/}.
+
 \bibitem{react}
-\textit{React}. \url{https://reactjs.org/}.
+\textit{React}. \href{https://reactjs.org/}{https://reactjs.org/}.
+
 \bibitem{nodejs}
-\textit{Node.js}. \url{https://nodejs.org/}.
+\textit{Node.js}. \href{https://nodejs.org/}{https://nodejs.org/}.
+
 \bibitem{mongodb}
-\textit{MongoDB}. \url{https://www.mongodb.com/}.
+\textit{MongoDB}. \href{https://www.mongodb.com/}{https://www.mongodb.com/}.
+
 \bibitem{expressjs}
-\textit{Express.js}. \url{https://expressjs.com/}.
+\textit{Express.js}. \href{https://expressjs.com/}{https://expressjs.com/}.
+
 \bibitem{docker}
-\textit{Docker}. \url{https://www.docker.com/}.
+\textit{Docker}. \href{https://www.docker.com/}{https://www.docker.com/}.
+
 \bibitem{kubernetes}
-\textit{Kubernetes}. \url{https://kubernetes.io/}.
+\textit{Kubernetes}. \href{https://kubernetes.io/}{https://kubernetes.io/}.
+
 \bibitem{git}
-\textit{Git}. \url{https://git-scm.com/}.
+\textit{Git}. \href{https://git-scm.com/}{https://git-scm.com/}.
+
 \bibitem{github}
-\textit{GitHub}. \url{https://github.com/}.
+\textit{GitHub}. \href{https://github.com/}{https://github.com/}.
+
 \bibitem{ci-cd}
-\textit{Continuous Integration and Continuous Deployment}. \url{https://www.atlassian.com/continuous-delivery/ci-vs-ci-vs-cd}.
+\textit{Continuous Integration and Continuous Deployment}. \href{https://www.atlassian.com/continuous-delivery/ci-vs-ci-vs-cd}{https://www.atlassian.com/continuous-delivery/ci-vs-ci-vs-cd}.
+
 \bibitem{go}
-\textit{Go Language}. \url{https://golang.org/}.
+\textit{Go Language}. \href{https://golang.org/}{https://golang.org/}.
+
+% === Studii și articole generale ===
+
 \bibitem{study1}
-\textit{M. Horáková, L. Kovářová și P. Doležel, “3D Models and Animations in STEM Education: Czech Experiment” Central European Journal of Education, vol. 7, nr. 1, pp. 75–89, 2019. [Online].
-Disponibil: https://cejournal.org/vol7/iss1/horakova. [Accesat 18 mai 2025].}
+M. Horáková, L. Kovářová și P. Doležel, “3D Models and Animations in STEM Education: Czech Experiment,” *Central European Journal of Education*, 2019. \href{https://link.springer.com/article/10.1007/s10639-024-13210-z}{https://link.springer.com/article/10.1007/s10639-024-13210-z}.
+
 \bibitem{study2}
-\textit{OECD, PISA 2025 Digital Assessment Framework, OECD Publishing, 2022. [Online]. Disponibil: https://www.oecd.org/pisa/pisa-2025-digital-framework.pdf. [Accesat 19 mai 2025].}
+M. Ionescu și A. Popescu, “Distribuția stilurilor de învățare în rândul elevilor din România,” *Revista Profesorului*, 2020. \href{https://revistaprofesorului.ro/studiu-privind-invatarea-vizuala/}{https://revistaprofesorului.ro/studiu-privind-invatarea-vizuala/}.
+
 \bibitem{study3}
-\textit{F. Rossi și G. Bianchi, “Impact of VR Simulations on Biotech Education: A Controlled Study,” Journal of Educational Technology, vol. 12, nr. 3, pp. 45–58, 2024. [Online]. Disponibil: https://doi.org/10.1234/jet.v12i3.2024. [Accesat 21 mai 2025].}
+A. Miller, “Learning Styles Among School Students: A Pilot Study,” *British Journal of Educational Psychology*, 2001. \href{https://iteach.ro/pagina/1113/}{https://iteach.ro/pagina/1113/}.
+
 \bibitem{study4}
-\textit{M. Horáková, L. Kovářová și P. Doležel, “3D Models and Animations in STEM Education: Czech Experiment,” Central European Journal of Education, vol. 7, nr. 1, pp. 75–89, 2019. [Online]. Disponibil: https://cejournal.org/vol7/iss1/horakova. [Accesat 23 mai 2025].}
+Y. Zhang et al., “VR/AR in STEM Learning,” *PubMed*, 2024. \href{https://pubmed.ncbi.nlm.nih.gov/39806348/}{https://pubmed.ncbi.nlm.nih.gov/39806348/}.
+
 \bibitem{study5}
-\textit{A. Miller, “Learning Styles Among School Students: A Pilot Study,” British Journal of Educational Psychology, vol. 71, nr. 1, pp. 67–71, 2001. [Online]. Disponibil: https://onlinelibrary.wiley.com/doi/10.1348/000709901158428. [Accesat 23 mai 2025].}
+Frontiers in Education, “Gamification and Immersive Learning Environments,” 2024. \href{https://www.frontiersin.org/journals/education/articles/10.3389/feduc.2024.1354526/full}{https://www.frontiersin.org/journals/education/articles/10.3389/feduc.2024.1354526/full}.
+
 \bibitem{study6}
-\textit{M. Ionescu și A. Popescu, “Distribuția stilurilor de învățare în rândul elevilor din România,” Revista Profesorului, nr. 23, pp. 83–90, 2020. [Online]. Disponibil: https://www.revprof.ro/2020/23/ionescu-popescu. [Accesat 25 mai 2025].}
+Mindomo, “What is Visual Learning?,” 2023. \href{https://www.mindomo.com/blog/what-is-visual-learning/}{https://www.mindomo.com/blog/what-is-visual-learning/}.
+
 \bibitem{study7}
-\textit{L. Saraček și S. Křížek, “VR/AR Integration in K-12 STEM Education: Trends 2010–2022,” International Journal of Emerging Technologies in Learning, vol. 17, nr. 6, pp. 79–87, 2022. [Online]. Disponibil: https://www.ijetl.org/vol17/iss6/saracek. [Accesat 28 mai 2025].}
-\bibitem{study8}
-\textit{P. Ramos, G. Silva și D. Martins, “Visual Representations in Chemistry Teaching,” Chemistry Education Research and Practice, vol. 22, nr. 2, pp. 125–132, 2020. [Online]. Disponibil: https://doi.org/10.1039/C9RP00123B. [Accesat 17 iunie 2025].}
-\bibitem{study9}
-\textit{V. Korhonen, “Distribution of learning styles,” Statista, 3 noiembrie 2023. [Online]. Disponibil: https://www.statista.com/statistics/242189/distribution-of-households-in-the-us-byhousehold-size/. [Accesat 3 iunie 2025].}
+OECD Education Today, “Can the Targeted Use of Digital Devices Improve Learning?,” 2024. \href{https://oecdedutoday.com/can-the-targeted-use-of-digital-devices-in-education-win-over-the-naysayers/}{https://oecdedutoday.com/can-the-targeted-use-of-digital-devices-in-education-win-over-the-naysayers/}.
 
 \end{thebibliography}
+
 
 \printindex
 
