[DOC] added market study and separated tech chapter

--- a/Roadmap/src/Documentatie/src/main.tex
+++ b/Roadmap/src/Documentatie/src/main.tex
@@ -3,8 +3,10 @@
 \include{src/chapters/intro}
 \include{src/chapters/analiza}
 \include{src/chapters/studiuPiata}
-\include{src/chapters/tehnologii}
+\include{src/chapters/tehnologiiFe}
+\include{src/chapters/tehnologiiBe}
 \include{src/chapters/implementare}
+\include{src/chapters/funcionalitati}
 \include{src/chapters/scenariiUtilizare}
 \include{src/chapters/evaluare}
 \include{src/chapters/concluzii}
