[FE + DOC] changed platform name space and started fe docs

--- a/Roadmap/src/Documentatie/thesis.tex
+++ b/Roadmap/src/Documentatie/thesis.tex
@@ -97,6 +97,10 @@ Mindomo, “What is Visual Learning?,” 2023. \href{https://www.mindomo.com/blo
 \bibitem{study7}
 OECD Education Today, “Can the Targeted Use of Digital Devices Improve Learning?,” 2024. \href{https://oecdedutoday.com/can-the-targeted-use-of-digital-devices-in-education-win-over-the-naysayers/}{https://oecdedutoday.com/can-the-targeted-use-of-digital-devices-in-education-win-over-the-naysayers/}.
 
+\bibitem{Gltf convertor}
+\textit{GLTF Convertor}. \href{https://gltf.pmnd.rs/}{https://gltf.pmnd.rs/}.
+
+
 \end{thebibliography}
 
 
